# mono

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  config.yml  gazelle.sh  go.work  go.work.sum  node_key.pem  node_key.sh  package-lock.json  package.json
.github/workflows/: static.yml
apps/broker/: broker.go  broker.go.orig  go.mod  go.sum  wire.go  wire_gen.go
apps/broker/app/: BUILD.bazel  app.go  broker.go  wire.go  wire_gen.go
apps/broker/cmd/: BUILD.bazel  main.go  main_test.go
apps/broker/internal/: BUILD.bazel  broker.go  wire.go  wire_gen.go
apps/broker/internal/config/: BUILD.bazel  config.go
apps/broker/internal/db/: BUILD.bazel  db.go  db_test.go
apps/broker/internal/messaging/: BUILD.bazel  mq.go  mq_test.go  queue.go
apps/broker/internal/mq/: mq.go  mq_test.go
apps/broker/internal/net/: BUILD.bazel  net.go
apps/broker/internal/networking/: BUILD.bazel  host.go
apps/broker/internal/router/: router.go
apps/broker/scripts/: build.broker.sh
apps/butler/: go.mod
apps/butler/app/: Makefile  app.go  config.go  wire.go  wire_gen.go
apps/butler/cmd/: BUILD.bazel  main.go  main_test.go
apps/butler/internal/api/: api.go
apps/cashier/: BUILD.bazel  Makefile  cashier.go  go.mod  go.sum
apps/cashier/app/: BUILD.bazel  app.go  wire.go  wire_gen.go
apps/cashier/cmd/: main.go  main_test.go
apps/cashier/internal/database/: core.go  storage.go
apps/cashier/internal/messaging/: queue.go
apps/cashier/internal/process/: process.go
apps/cashier/internal/voting/: block.go  block_verfy_voting.go  block_verify.go  block_voting.go  node.go
apps/coordinator/: config.go  coordinator  go.mod  go.sum  main.go  main_test.go  project.json
apps/trader/: BUILD.bazel  go.mod
apps/webplugins/chrome/: config.js  content.js  magick-config.js  manifest.json  pdq-config.js
apps/webplugins/chrome/js/: background.js  content.js
apps/webplugins/chrome/js/lib/magick/: magick.js  magickApi.js
apps/webplugins/chrome/js/lib/pdq/: pdq-photo-hasher.js
apps/webplugins/chrome/lib/pdq/: pdq-photo-hasher.js
apps/webplugins/chrome/popup/: popup.css  popup.html  popup.js
docs/whitepaper/: whitepaper-new.lyx  whitepaper.bib  whitepaper.lyx
libs/core/: core.go  go.mod
libs/core/pkg/: BUILD.bazel  core.go  core_test.go
libs/core/pkg/core/: BUILD.bazel  log.go
libs/data/: api.proto  comm.proto  core.proto  go.mod  storage.proto
libs/data_exchange/: go.mod  make.sh
libs/data_exchange/pkg/: BUILD.bazel  api.proto  comm.proto  core.proto  storage.proto
libs/proto/: api.proto  common.proto  communication.pb.go  communication.proto  go.mod  project.json  storage.proto
libs/schema/: Makefile  go.mod
libs/schema/pkg/: BUILD.bazel
libs/schema/pkg/broker/: BUILD.bazel  api.pb.go  api.proto  comm.pb.go  comm.proto
libs/schema/pkg/butler/: api.pb.go  api.proto
libs/schema/pkg/cashier/: BUILD.bazel  msg.pb.go  msg.proto  storage.pb.go  storage.proto
libs/schema/pkg/core/: BUILD.bazel  core.capnp  core.pb.go  core.proto
libs/shared/: go.mod  go.sum  project.json
libs/shared/pkg/base/: BUILD.bazel  key.go  log.go
libs/shared/pkg/containers/: fdb_container.go  fdb_container_test.go
libs/shared/pkg/main/: main.go
libs/shared/pkg/topics/: topics.go  topicsindex.go
scripts/: nats.sh
site/: index.html
web-apps/chrome-plugin/: README.md  content.js  manifest.json  package-lock.json  package.json
web-apps/chrome-plugin/libs/: extension.js  helper.js
web-apps/chrome-plugin/pdq/: pdq-photo-hasher.js
web-apps/chrome-plugin/sidepanel/: index.css  index.html  index.js
