module(
    name = "mono",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
#go_sdk.download(version = "1.23.3")

go_sdk.host()

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "protobuf", version = "29.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# All *direct* Go dependencies of all `go.mod` files referenced by the `go.work` file have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_caarlos0_env_v11",
    "com_github_google_wire",
    "com_github_libp2p_go_libp2p",
    "com_github_multiformats_go_multiaddr",
    "com_github_rs_zerolog",
    "org_golang_google_protobuf",
)
go_deps.gazelle_default_attributes(
    build_extra_args = [
        "-go_naming_convention_external=go_default_library",
    ],
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
)
