load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cashier_lib",
    srcs = ["cashier.go"],
    importpath = "github.com/flinkcoin/mono/apps/cashier",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@com_github_ipfs_go_log_v2//:go-log",
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_libp2p_go_libp2p//core/crypto",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_libp2p_go_libp2p//core/peerstore",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
        "@io_etcd_go_etcd_client_v3//:go_default_library",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "cashier",
    embed = [":cashier_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cashier_test",
    srcs = ["cashier_test.go"],
    embed = [":cashier_lib"],
)
