load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/flinkcoin/mono/apps/broker/cmd",
    visibility = ["//visibility:private"],
    deps = ["//apps/broker/internal"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cmd_test",
    srcs = ["main_test.go"],
    embed = [":cmd_lib"],
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
)

go_test(
    name = "lib_test",
    srcs = ["main_test.go"],
    embed = [":lib"],
)
