load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "pkg_proto",
    srcs = [
        "api.proto",
        "comm.proto",
        "core.proto",
        "storage.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:any_proto"],
)

go_proto_library(
    name = "pkg_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/flinkcoin/mono/libs/data_exchange/pkg",
    proto = ":pkg_proto",
    visibility = ["//visibility:public"],
)
