load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "messaging",
    srcs = ["mq.go"],
    importpath = "github.com/flinkcoin/mono/apps/broker/internal/messaging",
    visibility = ["//apps/broker:__subpackages__"],
    deps = [
        "@com_github_libp2p_go_libp2p//:go-libp2p",
        "@com_github_libp2p_go_libp2p//core/crypto",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//p2p/net/connmgr",
        "@com_github_libp2p_go_libp2p//p2p/security/noise",
        "@com_github_libp2p_go_libp2p//p2p/security/tls",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
    ],
)

go_test(
    name = "messaging_test",
    srcs = ["mq_test.go"],
    embed = [":messaging"],
    deps = ["@com_github_nats_io_nats_server_v2//server"],
)
