load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "net",
    srcs = ["net.go"],
    importpath = "github.com/flinkcoin/mono/apps/broker/internal/net",
    visibility = ["//apps/broker:__subpackages__"],
    deps = [
        "//libs/core/pkg/core",
        "@com_github_libp2p_go_libp2p//:go-libp2p",
        "@com_github_libp2p_go_libp2p//core/crypto",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//p2p/net/connmgr",
        "@com_github_libp2p_go_libp2p//p2p/security/noise",
        "@com_github_libp2p_go_libp2p//p2p/security/tls",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
    ],
)

go_library(
    name = "peer",
    srcs = [
        "addr_factory.go",
        "broadcaster.go",
        "config.go",
        "connection_gater.go",
        "dial_relay_node.go",
        "discovery.go",
        "fork.go",
        "fork_watcher.go",
        "gossip_scoring_params.go",
        "gossip_topic_mappings.go",
        "handshake.go",
        "host.go",
        "info.go",
        "interfaces.go",
        "message_id.go",
        "monitoring.go",
        "options.go",
        "pubsub.go",
        "pubsub_filter.go",
        "pubsub_tracer.go",
        "rpc_topic_mappings.go",
        "sender.go",
        "subnets.go",
        "topics.go",
        "utils.go",
        "watch_peers.go",
    ],
    importpath = "github.com/flinkcoin/mono/apps/broker/internal/peer",
    visibility = ["//apps/broker:__subpackages__"],
    deps = [
        "//apps/broker/internal/peer/peers:go_default_library",
        "//apps/broker/internal/peer/peers/peerdata:go_default_library",
        "//apps/broker/internal/peer/peers/scorers:go_default_library",
        "//apps/broker/internal/peer/types:go_default_library",
        "@com_github_btcsuite_btcd_btcec_v2//:btcec",
        "@com_github_ethereum_go_ethereum//crypto:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/discover:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/enode:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/enr:go_default_library",
        "@com_github_holiman_uint256//:go_default_library",
        "@com_github_kr_pretty//:pretty",
        "@com_github_libp2p_go_libp2p//:go-libp2p",
        "@com_github_libp2p_go_libp2p//config",
        "@com_github_libp2p_go_libp2p//core/connmgr",
        "@com_github_libp2p_go_libp2p//core/control",
        "@com_github_libp2p_go_libp2p//core/crypto",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_libp2p_go_libp2p//core/peerstore",
        "@com_github_libp2p_go_libp2p//core/protocol",
        "@com_github_libp2p_go_libp2p//p2p/security/noise",
        "@com_github_libp2p_go_libp2p//p2p/transport/quic",
        "@com_github_libp2p_go_libp2p//p2p/transport/tcp",
        "@com_github_libp2p_go_libp2p_mplex//:go_default_library",
        "@com_github_libp2p_go_libp2p_pubsub//:go_default_library",
        "@com_github_libp2p_go_libp2p_pubsub//pb:go_default_library",
        "@com_github_libp2p_go_mplex//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
        "@com_github_multiformats_go_multiaddr//net",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prysmaticlabs_fastssz//:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//async:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/cache:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/core/altair:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/core/feed/state:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/core/helpers:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/core/time:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/db:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/p2p/encoder:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/startup:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//cmd/beacon-chain/flags:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//config/features:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//config/params:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//consensus-types/primitives:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//consensus-types/wrapper:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//container/leaky-bucket:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//crypto/ecdsa:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//crypto/hash:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//encoding/bytesutil:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//io/file:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//math:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//monitoring/tracing:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//monitoring/tracing/trace:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//network:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//network/forks:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//proto/prysm/v1alpha1:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//proto/prysm/v1alpha1/metadata:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//runtime:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//runtime/version:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//time:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//time/slots:go_default_library",
        "@com_github_rs_zerolog//log",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "peer_test",
    srcs = [
        "addr_factory_test.go",
        "broadcaster_test.go",
        "connection_gater_test.go",
        "dial_relay_node_test.go",
        "discovery_test.go",
        "fork_test.go",
        "gossip_scoring_params_test.go",
        "gossip_topic_mappings_test.go",
        "host_test.go",
        "message_id_test.go",
        "options_test.go",
        "parameter_test.go",
        "pubsub_filter_test.go",
        "pubsub_fuzz_test.go",
        "pubsub_test.go",
        "rpc_topic_mappings_test.go",
        "sender_test.go",
        "subnets_test.go",
        "utils_test.go",
    ],
    embed = [":peer"],
    deps = [
        "//apps/broker/internal/peer/peers:go_default_library",
        "//apps/broker/internal/peer/peers/peerdata:go_default_library",
        "//apps/broker/internal/peer/peers/scorers:go_default_library",
        "//apps/broker/internal/peer/testing:go_default_library",
        "//apps/broker/internal/peer/types:go_default_library",
        "@com_github_ethereum_go_ethereum//crypto:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/discover:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/enode:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/enr:go_default_library",
        "@com_github_golang_snappy//:go_default_library",
        "@com_github_libp2p_go_libp2p//:go-libp2p",
        "@com_github_libp2p_go_libp2p//core/crypto",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_libp2p_go_libp2p//core/protocol",
        "@com_github_libp2p_go_libp2p//p2p/security/noise",
        "@com_github_libp2p_go_libp2p_pubsub//:go_default_library",
        "@com_github_libp2p_go_libp2p_pubsub//pb:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
        "@com_github_pkg_errors//:errors",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/blockchain/testing:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/cache:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/core/helpers:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/core/signing:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/db/testing:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/p2p:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/p2p/encoder:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//beacon-chain/startup:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//cmd/beacon-chain/flags:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//config/fieldparams:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//config/params:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//consensus-types/primitives:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//consensus-types/wrapper:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//container/leaky-bucket:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//crypto/ecdsa:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//crypto/hash:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//encoding/bytesutil:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//network:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//network/forks:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//proto/eth/v1:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//proto/prysm/v1alpha1:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//proto/testing:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//testing/assert:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//testing/require:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//testing/util:go_default_library",
        "@com_github_prysmaticlabs_prysm_v5//time:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_sirupsen_logrus//hooks/test:go_default_library",
        "@org_golang_google_protobuf//proto",
    ],
)

go_library(
    name = "networking",
    srcs = ["host.go"],
    importpath = "github.com/flinkcoin/mono/apps/broker/internal/networking",
    visibility = ["//apps/broker:__subpackages__"],
    deps = [
        "//libs/shared/pkg/base",
        "@com_github_libp2p_go_libp2p//:go-libp2p",
        "@com_github_libp2p_go_libp2p//core/crypto",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_libp2p_go_libp2p//p2p/net/connmgr",
        "@com_github_libp2p_go_libp2p//p2p/security/noise",
        "@com_github_libp2p_go_libp2p//p2p/security/tls",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
    ],
)
