load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "core.go",
        "log.go",
    ],
    importpath = "github.com/flinkcoin/mono/libs/core/pkg/core",
    visibility = ["//visibility:public"],
)

go_test(
    name = "core_test",
    srcs = ["core_test.go"],
    embed = [":core"],
)
