load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cashier",
    srcs = ["storage.pb.go"],
    importpath = "github.com/flinkcoin/mono/libs/schema/pkg/cashier",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/schema/pkg/core",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
