load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "base",
    srcs = ["base.pb.go"],
    importpath = "github.com/flinkcoin/mono/libs/schema/pkg/base",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

go_library(
    name = "core",
    srcs = ["core.pb.go"],
    importpath = "github.com/flinkcoin/mono/libs/schema/pkg/core",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
